0.1-76
- plot.profile(): add types sigma+dpdt and sigma+time
- ctd.trim(): add pmin parameter
- plot.ctd(): add Slim, Tlim, plim, lonlim, latlim arguments; add ability to draw maps
- add coastline.sle dataset
- plot.TS(): fix isopycnal labels for fresh water; add Slim and Tlim arguments
- make read.ctd() understand another SBE format
- add parse.latlon()
- add argument 'action' to oce.edit()
- add oce.write.table()
- add fill.gap()
0.1-75
- add add.column()
- add undrift.time()
- add tdr.patm()
- make read.tdr() gather serial no. info; show this on plot.tdr()
- switch to recommended verion-number format
- remove section.subset(), replaced by subset()
- improve log items in functions that read and assemble oce objects
    http://code.google.com/p/r-oce/issues/detail?id=38
- add subset.oce()
- add header()
- add argument 'which' to read.rbrdtr()
- make read.rbrdtr() understand headers better
- add arguments 'xtype' and 'ytype' to plot.section()
- improve accuracy of bottom drawn by plot.section()
- add section.smooth()
- fix bug making section.smooth() fail if fewer than 4 good data at any given level
    http://code.google.com/p/r-oce/issues/detail?id=36
- fix bug making summary.ctd() fail for stations within sections made by section.smooth()
    http://code.google.com/p/r-oce/issues/detail?id=34
- fix bug making sw.dynamic.height() choke on empty stations
    http://code.google.com/p/r-oce/issues/detail?id=33
- fix bug making plot.section() die if x is unordered
    http://code.google.com/p/r-oce/issues/detail?id=36
- rename rbrtdr functions to tdr functions, improving generality

0.1.74
- add argument "src" to as.ctd()
    http://code.google.com/p/r-oce/issues/detail?id=22
- plot.section() RHS axis needs tics
    http://code.google.com/p/r-oce/issues/detail?id=32
- trim axis whitespace in plot.profile() and plot.TS()
    http://code.google.com/p/r-oce/issues/detail?id=31
- make read.oce() understand WOCE section type