@@ -1,4 +1,5 @@
 0.1-76
+- read.tdr(): handle 5-column data files
 - plot.profile(): add types sigma+dpdt and sigma+time
 - ctd.trim(): add pmin parameter
 - plot.ctd(): add Slim, Tlim, plim, lonlim, latlim arguments; add ability to draw maps
